kubernetes/Deployment-file.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: webserver
spec: 
  replicas: 7 
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: nginx
        ports:
        - containerPort: 80
