kubernetes/apache-dep.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: apache-dep
  labels:
    app: Webserver
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: Webserver
  template:
    metadata:
      labels:
        app: Webserver
    spec:
      containers:
      - name: apache
        image: bitnami/apache:latest
        ports:
        - containerPort: 80
