kubernetes/pod-vol-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-nginx
spec:
  volumes:
    - name : server-s
      persistentVolumeClaim :
        claimName : pvc-web
  containers:
    - name : pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: webserver
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: server-s
