kubernetes/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis 
spec:
  containers:
  - name : redis
    image: redis
    volumeMounts:
    - name: redis-s
      mountPath: /data/redis
  volumes:
  - name: redis-s
